# ShortcutForge

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
cli/: mcp_server.py  server.py  (+1 more)
research/: ENV_SETUP.md  README.md  pyproject.toml  requirements.txt
research/configs/: ablation.yaml  base.yaml  model_registry.yaml  phase_b.yaml  phase_c.yaml
research/docs/: BALANCED_SASHIMI_PLAN.md  BALANCED_SASHIMI_RESEARCH.md  EXPERIMENT_RESULTS.md  process_makes_perfect.md
research/results/phase_b/: run_manifest.json
research/scripts/: build_decoder_vocab.py  build_negative_bank.py  build_ood_prompts.py  build_typed_ir_data.py  download_models.py  env_doctor.py  run_ablation_matrix.py  run_experiment.py  run_phase_a.py  run_phase_b.py  run_phase_c.py  run_trajectory_curator.py
research/src/: __init__.py  behavioral_fingerprint.py  bridge.py  contracts.py  cross_model_comparison.py  data.py  domain_gate.py  dsl_evaluator.py  encoder.py  encoder_adapter.py  evaluate.py  fingerprint_taxonomy.py  intent_extractor.py  ir_decomposer.py  logit_normalizer.py  lora_trainer.py  lora_utils.py  losses.py  lowering.py  model_adapter.py  model_registry.py  mutations.py  negative_bank_builder.py  pab_comparison.py  pab_metrics.py  pab_profile.py  pab_tracker.py  ternary_decoder.py  trainer.py  trainer_checks.py  trajectory_curator.py  value_filler.py
research/tests/: test_ablation_runner.py  test_behavioral_fingerprint.py  test_contracts.py  test_data_io.py  test_decoder_vocab.py  test_env_doctor.py  test_eval_fingerprint.py  test_ir_decomposer.py  test_losses.py  test_lowering.py  test_negative_bank_builder.py  test_ood_prompts.py  test_pab_comparison.py  test_pab_profile.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_smoke_e2e.py  test_ternary.py  test_trainer_pab.py  test_trajectory_curator.py
research/tests/fixtures/: tiny_train.jsonl
(+390 files in other folders)
