[project]
name = "shortcutforge"
version = "0.1.0"
description = "Natural language compiler for Apple Shortcuts — describe what you want, get a signed .shortcut binary"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "mcp>=1.25",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
local = [
    "outlines[mlxlm]",
    "mlx-lm>=0.22",
    "llguidance>=1.0",
]
training = [
    "tiktoken>=0.7",
]
research = [
    "torch>=2.5",
    "torchvision",
    "sentence-transformers>=5.2",
    "scikit-learn>=1.5",
    "numba>=0.62",
    "scipy>=1.12",
    "accelerate>=0.20",
    "tensorboard>=2.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "cli", "training", "research/src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.environment]
extra-paths = ["src", "cli", "training", "research/src", "research/scripts"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]
