[project]
name = "balanced-sashimi-research"
version = "0.1.0"
description = "Balanced Sashimi: hybrid continuous-ternary architecture for domain-constrained program synthesis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pabkit @ file:///Users/rohanvinaik/pabkit",
    "peft>=0.14",
    "huggingface-hub>=0.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
